unpackaged/main/default/objects/Account/fields/chonk_2__c.field-meta.xml
<CustomField>
    <fullName>chonk_2__c</fullName>
    <label>chonk-2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>