unpackaged/main/default/objects/Account/fields/chonk_3__c.field-meta.xml
<CustomField>
    <fullName>chonk_3__c</fullName>
    <label>chonk-3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>