unpackaged/main/default/objects/Account/fields/Test_Field__c.field-meta.xml
<CustomField>
    <fullName>Test_Field__c</fullName>
    <label>Test Field</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>